# gto-poker-trainer

./: .env.example  .gitignore  .streamlit_redeploy  CLAUDE.md  DEPLOYMENT.md  README.md  pyproject.toml  test_webapp.py
.codex/environments/: environment.toml
.github/workflows/: ci.yml  supabase-migrations.yml
.streamlit/: config.toml
analyzer/: __init__.py  hand_analyzer.py  hand_parser.py  postflop_analyzer.py
apps/api/: .env.example  __init__.py  main.py  pyproject.toml  railway.json  requirements-dev.txt  requirements.txt
apps/web/: .prettierignore  README.md  eslint.config.mjs  next.config.ts  package-lock.json  package.json  sentry.server.config.ts  tsconfig.json  vitest.config.ts
content/guides/: 3bet-ranges-construction.md  bankroll-management.md  beginners-complete-guide.md  (+37 more)
core/: __init__.py  equity.py  evaluator.py  hand.py  icm.py  position.py  postflop.py  postflop_standards.py  rfi_utils.py  scenario.py
data/: equity.json
docs/: SAAS_MIGRATION_PLAN.md
public/: robots.txt  sitemap.xml
scripts/: analyze_hands.py  generate_solver_data.py  migrate-texture-types.js  sync_rfi_constants.py  verify_solver_data.py
services/: auth.py  progress.py  supabase_schema.sql
supabase/: config.toml
tests/: test_evaluator.py  test_hand.py
tools/: generate_quiz.py  quiz_btn_all.html  quiz_btn_all_answers.html  quiz_full.html  quiz_full_answers.html  quiz_hj_co_new.html  quiz_hj_co_new_answers.html  quiz_utg_edges.html  quiz_utg_edges_answers.html
trainer/: drill.py  logic_quiz.py  push_fold_drill.py  session.py  tips.py
ui/: app.py
(+452 files in other folders)
