[project]
name = "gto-poker-trainer"
version = "0.1.0"
description = "GTO Poker Preflop Trainer - Practice and memorize GTO preflop strategies"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "streamlit>=1.28.0",
    "pandas>=2.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
